--- a/public_html/css/_form.scss
+++ b/public_html/css/_form.scss
@@ -252,6 +252,18 @@ form#mail_form input[type="button"] {
 	font-size: 100%;
 }
 
+form#mail_form a {
+	padding: 9px 15px;
+	vertical-align: middle;
+	line-height: 1;
+	background: $heading-color;
+	border-radius: 3px;
+	color: #ffffff;
+	font-family: inherit;
+	-webkit-appearance: none;
+	font-size: 100%;
+}
+
 form#mail_form input[type="button"]:hover {
 	cursor: pointer;
 	background: #449d44;
