--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -4,8 +4,7 @@
   font-family: "Avenir LT Std 55 Roman";
   font-style: normal;
   font-weight: normal;
-  src: local("Avenir LT Std 55 Roman"), url("../font/AvenirLTStd-Roman.woff") format("woff");
-}
+  src: local("Avenir LT Std 55 Roman"), url("../font/AvenirLTStd-Roman.woff") format("woff"); }
 
 /* Reset CSS */
 html,
@@ -44,8 +43,7 @@ button {
   /* paddingとborderを幅と高さに含める */
   -moz-box-sizing: border-box;
   /* paddingとborderを幅と高さに含める */
-  border-color: transparent;
-}
+  border-color: transparent; }
 
 article,
 header,
@@ -55,8 +53,7 @@ figure,
 figcaption,
 nav,
 section {
-  display: block;
-}
+  display: block; }
 
 body {
   line-height: 1.5;
@@ -68,14 +65,12 @@ body {
   /*  フォントを細めに設定 */
   -webkit-font-smoothing: antialiased;
   /*  フォントを細めに設定 */
-  font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ ProN W3", Meiryo, メイリオ, Osaka, "MS PGothic", arial, helvetica, sans-serif;
-}
+  font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ ProN W3", Meiryo, メイリオ, Osaka, "MS PGothic", arial, helvetica, sans-serif; }
 
 ol,
 ul {
   list-style: none;
-  list-style-type: none;
-}
+  list-style-type: none; }
 
 *,
 *:before,
@@ -89,54 +84,40 @@ ul {
   -webkit-margin-before: 0em;
   /* ブラウザが勝手に生成するmarginを無効化する */
   -webkit-margin-after: 0em;
-  /* ブラウザが勝手に生成するmarginを無効化する */
-}
+  /* ブラウザが勝手に生成するmarginを無効化する */ }
 
 .white {
-  color: white;
-}
+  color: white; }
 
 .text-right {
-  text-align: right;
-}
+  text-align: right; }
 
 section {
-  margin-bottom: 30px;
-}
+  margin-bottom: 30px; }
 
 p {
-  padding-bottom: 1rem;
-}
+  padding-bottom: 1rem; }
 
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .pb-0 {
-  padding-bottom: 0;
-}
+  padding-bottom: 0; }
 
 .pt-2 {
-  padding-top: 1rem;
-}
+  padding-top: 1rem; }
 
 @media screen and (max-width: 767px) {
   .db-sm {
-    display: block;
-  }
-}
+    display: block; } }
 
 @media screen and (max-width: 767px) {
   .dn-sm {
-    display: none !important;
-  }
-}
+    display: none !important; } }
 
 @media screen and (min-width: 768px) {
   .dn-lg {
-    display: none !important;
-  }
-}
+    display: none !important; } }
 
 .container {
   max-width: 960px;
@@ -147,8 +128,7 @@ a {
   /* 中央表示する */
   overflow: hidden;
   /* 右に余白ができないようにする。*/
-  padding: 0 18px;
-}
+  padding: 0 18px; }
 
 img {
   border: 0;
@@ -158,202 +138,147 @@ img {
   max-width: 100%;
   /* 画像にwidth:100%;は使わない方がよい。小さな画像を拡大する場合は画質がぼやけてしまいますので、画像に「width:100%;」の指定をするのは避け */
   vertical-align: top;
-  /* 行の上端に画像の上端をあわせる */
-}
+  /* 行の上端に画像の上端をあわせる */ }
 
 .inner {
   overflow: hidden;
-  /* 右に余白ができないようにする。*/
-}
+  /* 右に余白ができないようにする。*/ }
 
 h1,
 h2,
 h3,
 h4 {
   font-family: "Avenir LT Std 55 Roman", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", Meiryo, メイリオ, Osaka, "MS PGothic", arial, helvetica, sans-serif;
-  color: #630f06;
-}
+  color: #630f06; }
 
 h1 {
-  font-size: 26px;
-}
+  font-size: 26px; }
 
 h2 {
-  font-size: 28px;
-}
+  font-size: 28px; }
 
 h3 {
-  font-size: 22px;
-}
+  font-size: 22px; }
 
 a,
 p {
-  color: #1c1c1c;
-}
+  color: #1c1c1c; }
 
 .heading-color {
-  color: #630f06;
-}
+  color: #630f06; }
 
 .menu {
   color: #630f06;
-  font-size: 45px;
-}
+  font-size: 45px; }
 
 #header {
   font-family: "Avenir LT Std 55 Roman", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", Meiryo, メイリオ, Osaka, "MS PGothic", arial, helvetica, sans-serif;
-  color: #630f06;
-}
-
-#header p {
-  font-size: 14px;
-  text-align: right;
-  color: #630f06;
-}
-
-#header a {
-  color: #630f06;
-}
-
-#header .header {
-  display: flex;
-  padding: 17px 0;
-}
-
-#header .header .menu {
-  margin-left: auto;
-}
-
-#header .header .header-nav {
-  display: flex;
-  flex: 0 0 60%;
-  justify-content: space-around;
-  margin-left: auto;
-}
-
-#header .menu-nav {
-  z-index: 1000;
-  position: fixed;
-  right: 0;
-  width: 260px;
-  margin-right: -260px;
-  overflow-y: auto;
-  background: white;
-  z-index: 99999999;
-  -webkit-transition: all 0.4s ease 0s;
-  -moz-transition: all 0.4s ease 0s;
-  -ms-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
-}
-
-#header .menu-nav li {
-  background-color: white;
-  padding: 20px 0;
-  font-size: 16px;
-  text-align: center;
-  border-top: 1px solid #630f06;
-  border-left: 1px solid #630f06;
-  border-right: 1px solid #630f06;
-}
-
-#header .menu-nav li a {
-  color: #630f06;
-  font-weight: bold;
-}
-
-#header .menu-nav li:first-child {
-  padding: 5px 0;
-  background-color: #630f06;
-  color: white;
-}
-
-#header .menu-nav li:last-child {
-  border-bottom: 1px solid #630f06;
-}
-
-#header .menu-nav.active {
-  right: 250px;
-  width: 260px;
-  -webkit-transition: all 0.4s ease 0s;
-  -moz-transition: all 0.4s ease 0s;
-  -ms-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
-}
+  color: #630f06; }
+  #header p {
+    font-size: 14px;
+    text-align: right;
+    color: #630f06; }
+  #header a {
+    color: #630f06; }
+  #header .header {
+    display: flex;
+    padding: 17px 0; }
+    #header .header .menu {
+      margin-left: auto; }
+    #header .header .header-nav {
+      display: flex;
+      flex: 0 0 60%;
+      justify-content: space-around;
+      margin-left: auto; }
+  #header .menu-nav {
+    z-index: 1000;
+    position: fixed;
+    right: 0;
+    width: 260px;
+    margin-right: -260px;
+    overflow-y: auto;
+    background: white;
+    z-index: 99999999;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -ms-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
+    #header .menu-nav li {
+      background-color: white;
+      padding: 20px 0;
+      font-size: 16px;
+      text-align: center;
+      border-top: 1px solid #630f06;
+      border-left: 1px solid #630f06;
+      border-right: 1px solid #630f06; }
+      #header .menu-nav li a {
+        color: #630f06;
+        font-weight: bold; }
+    #header .menu-nav li:first-child {
+      padding: 5px 0;
+      background-color: #630f06;
+      color: white; }
+    #header .menu-nav li:last-child {
+      border-bottom: 1px solid #630f06; }
+  #header .menu-nav.active {
+    right: 250px;
+    width: 260px;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -ms-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s; }
 
 #mainvisual {
   background-image: url(../img/home-sp-top.jpg);
   height: 70vh;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 0% 100%;
-}
-
-@media screen and (min-width: 768px) {
-  #mainvisual {
-    background-image: url(../img/home-pc-top.jpg);
-    background-size: cover;
-    height: 90vh;
-    width: 100vw;
-  }
-}
+  background-position: 0% 100%; }
+  @media screen and (min-width: 768px) {
+    #mainvisual {
+      background-image: url(../img/home-pc-top.jpg);
+      background-size: cover;
+      height: 90vh;
+      width: 100vw; } }
 
 .sns {
   display: flex;
-  justify-content: flex-end;
-}
-
-.sns i {
-  margin: 0.4rem;
-}
-
-.sns a {
-  color: #1c1c1c;
-}
+  justify-content: flex-end; }
+  .sns i {
+    margin: 0.4rem; }
+  .sns a {
+    color: #1c1c1c; }
 
 #video h3 {
   text-align: center;
   color: #1c1c1c;
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 @media screen and (min-width: 768px) {
   #video .movie-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-  }
-}
+    justify-content: space-around; } }
 
 #video .movie-box {
   flex: 0 0 30%;
-  padding-bottom: 40px;
-}
-
-@media screen and (min-width: 768px) {
-  #video .movie-box {
-    padding-bottom: 60px;
-  }
-}
-
-#video .movie-box h3 {
-  line-height: 18px;
-}
-
-@media screen and (min-width: 768px) {
-  #video .movie-box .pb-temp-row {
-    padding-bottom: 18px;
-  }
-}
-
-#video .movie-box p {
-  font-size: 12px;
-  line-height: 12px;
-  text-align: center;
-  margin-bottom: 0;
-  padding-bottom: 6px;
-}
+  padding-bottom: 40px; }
+  @media screen and (min-width: 768px) {
+    #video .movie-box {
+      padding-bottom: 60px; } }
+  #video .movie-box h3 {
+    line-height: 18px; }
+  @media screen and (min-width: 768px) {
+    #video .movie-box .pb-temp-row {
+      padding-bottom: 18px; } }
+  #video .movie-box p {
+    font-size: 12px;
+    line-height: 12px;
+    text-align: center;
+    margin-bottom: 0;
+    padding-bottom: 6px; }
 
 #video .movie-wrap {
   position: relative;
@@ -362,157 +287,121 @@ p {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  margin-top: 0;
-}
+  margin-top: 0; }
 
 #video .movie-wrap iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  #video .movie-wrap iframe {
-    width: 100%;
-    height: 100%;
-  }
-}
+  height: 100%; }
+  @media screen and (min-width: 768px) {
+    #video .movie-wrap iframe {
+      width: 100%;
+      height: 100%; } }
 
 #music h3 {
   text-align: center;
   color: #1c1c1c;
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 #music p {
   text-align: center;
-  font-size: 12px;
-}
+  font-size: 12px; }
 
 #music .music-wrap {
   margin: 10px;
   margin-top: 0;
-  text-align: center;
-}
+  text-align: center; }
 
 .pb-1 {
-  padding-bottom: 0.1rem;
-}
+  padding-bottom: 0.1rem; }
 
 .mb-4 {
-  margin-bottom: 4rem;
-}
+  margin-bottom: 4rem; }
 
 .mx-auto {
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 .inline-block {
-  display: inline-block;
-}
+  display: inline-block; }
 
 .text-center {
-  text-align: center;
-}
+  text-align: center; }
 
 .width-60 {
-  width: 60%;
-}
+  width: 60%; }
 
 #music .music {
-  margin-bottom: 50px;
-}
+  margin-bottom: 50px; }
 
 #music .listen {
   display: flex;
-  justify-content: center;
-}
-
-#music .listen .link-icon {
-  display: block;
-  width: 40%;
-  height: auto;
-}
-
-#music .listen .link-icon img {
-  width: 100%;
-}
+  justify-content: center; }
+  #music .listen .link-icon {
+    display: block;
+    width: 40%;
+    height: auto; }
+    #music .listen .link-icon img {
+      width: 100%; }
 
 #photo .card-columns {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-}
+  justify-content: space-around; }
 
 #photo .card {
   text-align: center;
-  padding-bottom: 20px;
-}
-
-#photo .card img {
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
-}
+  padding-bottom: 20px; }
+  #photo .card img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover; }
 
 .background-img {
   background-image: url(../img/home-sp-top.jpg);
   height: 80vh;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-
-@media screen and (min-width: 768px) {
-  .background-img {
-    background-image: url(../img/home-pc-top.jpg);
-    height: 90vh;
-  }
-}
+  background-position: 50% 50%; }
+  @media screen and (min-width: 768px) {
+    .background-img {
+      background-image: url(../img/home-pc-top.jpg);
+      height: 90vh; } }
 
 .bg-mask {
   height: 100%;
-  background: rgba(255, 255, 255, 0.5);
-}
+  background: rgba(255, 255, 255, 0.5); }
 
 #schedule {
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 #footer {
-  background-color: #1c1c1c;
-}
+  background-color: #1c1c1c; }
 
 form#mail_form dl {
-  width: 100%;
-  overflow: hidden;
-}
+  width: 50%;
+  overflow: hidden; }
 
 form#mail_form dl dt {
   width: 100%;
   padding: 15px 0;
   padding-bottom: 0;
   text-align: left;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 form#mail_form dl dd {
   width: 100%;
-  padding: 15px 0 15px 0;
-}
+  padding: 15px 0 15px 0; }
 
 form#mail_form dl dt:first-child,
 form#mail_form dl dt:first-child + dd {
-  border: none;
-}
+  border: none; }
 
 form#mail_form dl dt span {
   display: block;
   font-size: 85%;
-  color: #3377ff;
-}
+  color: #3377ff; }
 
 /* -- for JavaScript ここから -------------------------------------------------------------------------------- */
 form#mail_form dl dt span.required,
@@ -521,26 +410,22 @@ form#mail_form dl dt span.optional {
   color: #ffffff;
   line-height: 1;
   padding: 8px 9px;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 form#mail_form dl dt span.required {
   background: #d9534f;
-  border: 1px solid #d43f3a;
-}
+  border: 1px solid #d43f3a; }
 
 form#mail_form dl dt span.optional {
   background: #337ab7;
-  border: 1px solid #2e6da4;
-}
+  border: 1px solid #2e6da4; }
 
 form#mail_form dl dd span.error_blank,
 form#mail_form dl dd span.error_format,
 form#mail_form dl dd span.error_match {
   display: block;
   color: #ff0000;
-  margin-top: 3px;
-}
+  margin-top: 3px; }
 
 span.loading {
   width: 50px;
@@ -559,30 +444,23 @@ span.loading {
   top: 50%;
   left: 50%;
   margin-top: -30px;
-  margin-left: -30px;
-}
+  margin-left: -30px; }
 
 @-webkit-keyframes load-circle {
   0% {
     -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+    transform: rotate(0deg); }
   100% {
     -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
+    transform: rotate(360deg); } }
 
 @keyframes load-circle {
   0% {
     -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+    transform: rotate(0deg); }
   100% {
     -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
+    transform: rotate(360deg); } }
 
 /* -- for JavaScript ここまで -------------------------------------------------------------------------------- */
 form#mail_form input[type="text"],
@@ -596,8 +474,7 @@ form#mail_form input[type="tel"] {
   -webkit-appearance: none;
   font-size: 100%;
   font-family: inherit;
-  width: 100%;
-}
+  width: 100%; }
 
 form#mail_form input[type="text"]:focus,
 form#mail_form input[type="email"]:focus,
@@ -606,25 +483,21 @@ form#mail_form textarea:focus {
   box-shadow: 0px 0px 5px #55ccff;
   border: 1px solid #55ccff;
   background: #ffffff;
-  width: 100%;
-}
+  width: 100%; }
 
 form#mail_form ul li input[type="radio"],
 form#mail_form ul li input[type="checkbox"] {
   margin-right: 10px;
-  margin-top: 7px;
-}
+  margin-top: 7px; }
 
 form#mail_form ul li:first-child input[type="radio"],
 form#mail_form ul li:first-child input[type="checkbox"] {
-  margin-top: 0px;
-}
+  margin-top: 0px; }
 
 form#mail_form select {
   font-size: 100%;
   font-family: inherit;
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 form#mail_form textarea {
   display: block;
@@ -638,20 +511,16 @@ form#mail_form textarea {
   background: #fafafa;
   -webkit-appearance: none;
   font-size: 100%;
-  font-family: inherit;
-}
+  font-family: inherit; }
 
 form#mail_form ul {
-  list-style-type: none;
-}
+  list-style-type: none; }
 
 form#mail_form ul li label:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 form#mail_form input#company {
-  width: 100%;
-}
+  width: 100%; }
 
 form#mail_form input#name_1,
 form#mail_form input#name_2,
@@ -660,13 +529,11 @@ form#mail_form input#read_2,
 form#mail_form input#postal,
 form#mail_form input#phone,
 form#mail_form input#schedule {
-  width: 100%;
-}
+  width: 100%; }
 
 form#mail_form input#mail_address,
 form#mail_form input#mail_address_confirm {
-  width: 100%;
-}
+  width: 100%; }
 
 form#mail_form input#postal + a {
   display: inline-block;
@@ -680,24 +547,20 @@ form#mail_form input#postal + a {
   font-family: inherit;
   text-decoration: none;
   position: relative;
-  top: -1px;
-}
+  top: -1px; }
 
 form#mail_form input#postal + a:hover {
   cursor: pointer;
   background: #31b0d5;
-  border: 1px solid #269abc;
-}
+  border: 1px solid #269abc; }
 
 form#mail_form input#address {
-  width: 100%;
-}
+  width: 100%; }
 
 form#mail_form p#form_submit {
   width: 100%;
   margin: 0 auto;
-  padding: 15px 0;
-}
+  padding: 15px 0; }
 
 form#mail_form input[type="button"] {
   padding: 9px 15px;
@@ -708,64 +571,60 @@ form#mail_form input[type="button"] {
   color: #ffffff;
   font-family: inherit;
   -webkit-appearance: none;
-  font-size: 100%;
-}
+  font-size: 100%; }
+
+form#mail_form a {
+  padding: 9px 15px;
+  vertical-align: middle;
+  line-height: 1;
+  background: #630f06;
+  border-radius: 3px;
+  color: #ffffff;
+  font-family: inherit;
+  -webkit-appearance: none;
+  font-size: 100%; }
 
 form#mail_form input[type="button"]:hover {
   cursor: pointer;
   background: #449d44;
-  border: 1px solid #398439;
-}
+  border: 1px solid #398439; }
 
 form#mail_form input#form_submit_button {
-  margin-left: 35%;
-}
+  margin-left: 35%; }
 
 /* -- responsive ----------------------------------------------------------------------------------------------------------------- */
 /* 1000pixel start */
 @media screen and (max-width: 1000px) {
   form#mail_form {
-    width: 95%;
-  }
+    width: 95%; }
   form#mail_form dl {
-    overflow: visible;
-  }
+    overflow: visible; }
   form#mail_form dl dt {
     width: auto;
     text-align: left;
     padding: 10px 0 5px;
-    font-weight: bold;
-  }
+    font-weight: bold; }
   form#mail_form dl dd {
     width: auto;
     border-top: none;
-    padding: 0px 0 13px 0px;
-  }
+    padding: 0px 0 13px 0px; }
   form#mail_form dl dt span {
-    font-weight: normal;
-  }
+    font-weight: normal; }
   /* -- for JavaScript ここから -------------------------------------------------------------------------------- */
   form#mail_form dl dt span.required,
   form#mail_form dl dt span.optional {
-    margin-right: 1em;
-    /* margin-bottom: 2em; */
-  }
+    margin-right: 1em; }
   /* -- for JavaScript ここまで -------------------------------------------------------------------------------- */
   form#mail_form input[type="text"],
   form#mail_form input[type="email"],
   form#mail_form input[type="tel"] {
-    margin-top: 0px;
-  }
+    margin-top: 0px; }
   form#mail_form input#form_submit_button {
-    margin-left: 0;
-  }
+    margin-left: 0; }
   form#mail_form select {
-    margin-top: 0;
-  }
+    margin-top: 0; }
   form#mail_form input#phone,
   form#mail_form input#schedule {
-    width: 50%;
-  }
-}
+    width: 50%; } }
 
 /* 1000pixel end */
